# tigy

./: .gitignore  CMakeLists.txt  README.md  diagnostics.c  diagnostics.h  grammar.txt  hashtable.c  hashtable.h  lexer.c  main.c  parser.c  token.h
doc/: Doxyfile  grammar.txt
doc/html/: annotated.html  array_8c_source.html  array_8h.html  array_8h_source.html  classes.html  dir_03edfdab276939f7c1b3bd4d03350081.html  dir_112d05b596e87649904568d111fab0f5.html  dir_14b3ebcd5db25b8268f29ee634a14ecf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_ff96bbf2b0a8e5a9c530cf2b6cc00913.html  execute_8c_source.html  execute_8h_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  generate_8c_source.html  generate_8h_source.html  globals.html  globals_func.html  hash-table_8c_source.html  hash-table_8h.html  hash-table_8h_source.html  index.html  lexer_8c_source.html  main_8c_source.html  menudata.js  parser_8c_source.html  program_8c_source.html  program_8h_source.html  scope_8c_source.html  scope_8h_source.html  source-file_8c_source.html  source-file_8h_source.html  stack_8c_source.html  stack_8h.html  stack_8h_source.html  structarray-members.html  (+33 more)
src/: lexer.c  main.c  parser.c  source-file.c  source-file.h  token.h
test/: array-creation-with-non-integer-size.tiger  array-initilization.tiger  array.tiger  fib.tiger  function-declaration-outside-the-let.tiger  function-name-collision.tiger  gcd.tiger  merge.tiger  missing-then.tiger  nasted-record.tiger  nested-functions.tiger  nested-records.tiger  nested-scopes-variable-use.tiger  queens.tiger  too-few-arguments.tiger  too-many-arguments.tiger  trailing-code.tiger  unterminated-string.tiger  unvalid-function-argument.tiger  use-undeclared-function.tiger  use-undeclared-variable.tiger  var-name-collision.tiger  variable-declaration-outside-the-let.tiger
(+75 files in other folders)
